crates/platform-telemetry/tests/compile_fail/sensitive_field.rs
use platform_telemetry::field_pii_check;

field_pii_check!(Sensitive);

fn main() {}
